# Verse

./: .env  .gitignore  LICENSE  Literature_Overview_of_handcrafted_embedded_pipelines.md  Literature_Review_Formatted.docx  PROJECT_ROADMAP.md  README.md  pyproject.toml  recommendation_strategies.md  test.py
.github/workflows/: deploy-testing.yml
app/: __init__.py  main.py
app/api/: dependencies.py  schemas.py  server.py
app/assistant/: __init__.py  cache.py  executor.py  history.py  parser.py  planner.py  prompts.py  schemas.py
app/config/: settings.py
app/database/: connection.py  models.py
app/embeddings/: generator.py
app/features/: __init__.py  extractor.py
app/history/: __init__.py  tracker.py
app/indexing/: __init__.py  scanner.py
app/metadata/: __init__.py  enrichment.py  extractor.py  models.py  semantic.py  technical.py
app/recommendations/: __init__.py  base.py  content.py  content_pipeline.py  hybrid.py  registry.py  selector.py  vector.py
app/search/: __init__.py  index.py
migrations/: env.py
tests/: conftest.py  test_api.py  test_assistant.py  test_cli_model_config.py  test_cli_scan.py  test_database.py  test_embeddings.py  test_enrichment.py  test_features.py  test_history.py  test_metadata.py  test_phase15_rigorous.py  test_playlist_api_routes.py  test_playlist_filtering.py  test_playlist_services.py  test_quality_first_verification.py  test_recommendation_selector.py  test_recommendations.py  test_scanner.py  test_search.py  test_semantic.py  test_semantic_rigorous.py  test_technical.py  test_ui.py  test_web_api.py
(+33 files in other folders)
